# mapguide

./: .gitmodules  License.htm  License.html  Makefile.am  Makefile.in  README.CONFIGURE  README.md  Target.vsprops  TargetX64.vsprops  build.bat  build64.bat  build_desktop.bat  build_oem.sh  build_sdk.bat  config.sub  configure  configure.in  csmap_excludes.txt  desktop_package_excludes.txt  dll_excludes.txt  dotnet_excludes.txt  forbruce.patch  java_excludes.txt  mgselection.patch  nuget_pack.bat  nuget_prepare.bat  package_excludes.txt  php_excludes.txt  setenvironment.bat  setenvironment64.bat
Common/Foundation/: Foundation.h  Foundation.rc  Foundation.vcproj  Foundation.vcxproj  FoundationBuild.cpp  FoundationDefs.h  Makefile.am
Common/MapGuideCommon/: Makefile.am  MapGuideCommon.h  MapGuideCommon.rc  MapGuideCommon.vcproj  MapGuideCommon.vcxproj  MapGuideCommon.vcxproj.filters  MapGuideCommonBuild.cpp
Common/MdfModel/: AreaRule.h  AreaSymbolization2D.cpp  AreaSymbolization2D.h  AreaTypeStyle.cpp  AreaTypeStyle.h  AreaUsage.cpp  AreaUsage.h  AttributeRelate.cpp  AttributeRelate.h  Base64.h  BaseMapLayer.cpp  BaseMapLayer.h  BaseMapLayerGroup.cpp  BaseMapLayerGroup.h  BlockSymbol.cpp  BlockSymbol.h  Box2D.cpp  Box2D.h  CalculatedProperty.cpp  CalculatedProperty.h  ChannelBand.cpp  ChannelBand.h  CompositeRule.cpp  CompositeRule.h  CompositeSymbolization.cpp  CompositeSymbolization.h  CompositeTypeStyle.cpp  CompositeTypeStyle.h  CompoundSymbolDefinition.cpp  ConvertUTF.h  DataTypes.h  DisplayScale.cpp  DisplayScale.h  DrawingLayerDefinition.cpp  DrawingLayerDefinition.h  ElevationSettings.cpp  ElevationSettings.h  Extension.cpp  Extension.h  FeatureSource.cpp  (+148 more)
Common/MdfParser/: FSDSAX2Parser.cpp  FSDSAX2Parser.h  IOAreaRule.cpp  IOAreaRule.h  IOAreaSymbolization2D.cpp  IOAreaSymbolization2D.h  IOAreaTypeStyle.cpp  IOAreaTypeStyle.h  IOAreaUsage.cpp  IOAreaUsage.h  IOAttributeRelate.cpp  IOAttributeRelate.h  IOBaseMapDefinition.cpp  IOBaseMapLayer.cpp  IOBaseMapLayer.h  IOBaseMapLayerGroup.cpp  IOBaseMapLayerGroup.h  IOBlockSymbol.cpp  IOBlockSymbol.h  IOCalculatedProperty.cpp  IOCalculatedProperty.h  IOChannelBand.cpp  IOChannelBand.h  IOCompositeRule.cpp  IOCompositeRule.h  IOCompositeSymbolization.cpp  IOCompositeSymbolization.h  IOCompositeTypeStyle.cpp  IOCompositeTypeStyle.h  IOCompoundSymbolDefinition.cpp  IOCompoundSymbolDefinition.h  IODrawingLayerDefinition.cpp  IODrawingLayerDefinition.h  IOElevationSettings.cpp  IOElevationSettings.h  IOExtension.cpp  IOExtension.h  IOExtra.cpp  IOExtra.h  IOFeatureSource.cpp  (+145 more)
Common/PlatformBase/: Makefile.am  PlatformBase.h  PlatformBase.rc  PlatformBase.vcproj  PlatformBase.vcxproj  PlatformBaseBuild.cpp
Common/Renderers/: AGGFillPatterns.h  AGGImageIO.cpp  AGGImageIO.h  AGGRenderer.cpp  AGGRenderer.h  AGGW2DRewriter.cpp  AGGW2DRewriter.h  CriticalSection.cpp  CriticalSection.h  DWFRSInputStream.h  DWFRenderer.cpp  DWFRenderer.h  EMapRenderer.cpp  EMapRenderer.h  EMapUpdateRenderer.cpp  EMapUpdateRenderer.h  EPlotRenderer.cpp  EPlotRenderer.h  FontManager.cpp  FontManager.h  GDFillPatterns.cpp  GDFillPatterns.h  GDRenderer.cpp  GDRenderer.h  GDUtils.cpp  GDUtils.h  GDW2DRewriter.cpp  GDW2DRewriter.h  KmlContent.cpp  KmlContent.h  KmlIconStyle.h  KmlLineStyle.cpp  KmlLineStyle.h  KmlPolyStyle.h  KmlRenderer.cpp  KmlRenderer.h  Makefile.am  MapQuantization.cpp  ObservationMesh.cpp  RSDWFOutputStream.h  (+18 more)
Common/Service/: AceCommon.h  Common.h  Makefile.am  Service.rc  Service.vcproj
Common/Stylization/: BIDIConverter.cpp  BIDIConverter.h  Band.cpp  Band.h  BandData.cpp  BandData.h  BooleanValue.cpp  BooleanValue.h  Bounds.h  CSysTransformer.h  Centroid.cpp  Centroid.h  Color.cpp  Color.h  DWFRSInputStream.h  DWFRenderer.cpp  DWFRenderer.h  DataValue.h  DataValuePool.cpp  DataValuePool.h  DataValueStack.h  DateTimeValue.cpp  DateTimeValue.h  DefaultStylizer.cpp  DefaultStylizer.h  DoubleValue.cpp  DoubleValue.h  EMapRenderer.cpp  EMapRenderer.h  EMapUpdateRenderer.cpp  EMapUpdateRenderer.h  EPlotRenderer.cpp  EPlotRenderer.h  ExpressionFunctionArgb.cpp  ExpressionFunctionArgb.h  ExpressionFunctionDecap.cpp  ExpressionFunctionFeatureClass.cpp  ExpressionFunctionFeatureClass.h  ExpressionFunctionFeatureId.cpp  ExpressionFunctionIf.cpp  (+244 more)
MgDev/: CMakeLists.txt  CMake_README.txt  License.htm  License.html  License.txt  Makefile.am  README  README.md  Target.vsprops  TargetX64.vsprops  acinclude.m4  aclocal.m4  base_package_excludes.txt  build.bat  build64.bat  build_desktop.bat  build_fusion.bat  build_oem.sh  build_sdk.bat  cmake_bootstrap.sh  cmake_build.sh  cmake_linuxapt.sh  config.guess  configure  configure.in  csmap_excludes.txt  desktop_package_excludes.txt  dotnet_excludes.txt  dotnetapi_excludes.txt  dotnetxml_excludes.txt  java_excludes.txt  mapagent_excludes.txt  nuget_pack.bat  nuget_prepare.bat  package_excludes.txt  php_excludes.txt  prepare_webtier_components.bat  release64_excludes.txt  release_excludes.txt  run_tests.bat  (+8 more)
MgDev/BuildTools/: CMakeLists.txt
MgDev/Common/: CMakeLists.txt  Common.sln  Makefile.am  Makefile.in  PlatformAPI.sln  ProductVersion.h
MgDev/Desktop/: CMakeLists.txt  MgDesktopApi.sln  MgDesktopApi_VS2010.sln  MgDesktopDotNet.sln  MgDesktopDotNet_VS2010.sln  desktop_package_excludes.txt  nuget_pack.bat  nuget_prepare.bat  samples_exclude.txt
MgDev/Doc/: MgDesktop_Doxyfile  MgOpenSource_Doxyfile  MgOpenSource_Doxyfile_Linux  MgOpenSource_run_doxygen.bat  MgOpenSource_run_doxygen.sh
MgDev/MgDev/: README.CONFIGURE  configure
MgDev/Oem/: CMakeLists.txt  Makefile.am  Makefile.in  oem.sln  oem_VS2010.sln
MgDev/Server/: CMakeLists.txt  Makefile.am  Makefile.in  Server.sln  Server_VS2010.sln
MgDev/UnitTest/: CMakeLists.txt  prepare.php  run_php_tests.bat  set_test_params.bat
MgDev/Web/: CMakeLists.txt  Makefile.am
MgDev/nuget/: api-base-readme.txt  api-desktop-readme.txt  api-desktop-viewer-readme.txt  api-web-readme.txt  cs-map-dict-readme.txt  cs-map-dictionaries.nuspec.tpl  mapguide-api-base.nuspec.tpl  mapguide-api-web.nuspec.tpl  (+6 more)
Oem/: Makefile.am  oem.sln  oem_VS2010.sln
(+50612 files in other folders)
