AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = Foundation.vcproj Foundation.rc

lib_LTLIBRARIES = libMgFoundation.la

libMgFoundation_la_SOURCES = \
  FoundationBuild.cpp

include_SOURCES = \
  Data/BatchPropertyCollection.cpp \
  Data/Byte.cpp \
  Data/ByteReader.cpp \
  Data/ByteSink.cpp \
  Data/ByteSource.cpp \
  Data/Collection.cpp \
  Data/DateTime.cpp \
  Data/MimeType.cpp \
  Data/NamedCollection.cpp \
  Data/NullableProperty.cpp \
  Data/Property.cpp \
  Data/PropertyCollection.cpp \
  Data/PropertyDefinition.cpp \
  Data/StringCollection.cpp \
  Data/StringProperty.cpp \
  Exception/ApplicationException.cpp \
  Exception/ArgumentOutOfRangeException.cpp \
  Exception/ClassNotFoundException.cpp \
  Exception/ConfigurationException.cpp \
  Exception/ConfigurationLoadFailedException.cpp \
  Exception/ConfigurationSaveFailedException.cpp \
  Exception/DateTimeException.cpp \
  Exception/DecryptionException.cpp \
  Exception/DirectoryNotFoundException.cpp \
  Exception/DivideByZeroException.cpp \
  Exception/DomainException.cpp \
  Exception/DuplicateDirectoryException.cpp \
  Exception/DuplicateFileException.cpp \
  Exception/DuplicateObjectException.cpp \
  Exception/EncryptionException.cpp \
  Exception/Exception.cpp \
  Exception/FileIoException.cpp \
  Exception/FileNotFoundException.cpp \
  Exception/GridDensityException.cpp \
  Exception/IndexOutOfRangeException.cpp \
  Exception/InvalidArgumentException.cpp \
  Exception/InvalidCastException.cpp \
  Exception/InvalidMimeTypeException.cpp \
  Exception/InvalidOperationException.cpp \
  Exception/InvalidPropertyTypeException.cpp \
  Exception/InvalidStreamHeaderException.cpp \
  Exception/IoException.cpp \
  Exception/LengthException.cpp \
  Exception/LogicException.cpp \
  Exception/NotFiniteNumberException.cpp \
  Exception/NotImplementedException.cpp \
  Exception/NullArgumentException.cpp \
  Exception/NullPropertyValueException.cpp \
  Exception/NullReferenceException.cpp \
  Exception/ObjectNotFoundException.cpp \
  Exception/OutOfMemoryException.cpp \
  Exception/OutOfRangeException.cpp \
  Exception/OverflowException.cpp \
  Exception/PlatformNotSupportedException.cpp \
  Exception/ResourcesException.cpp \
  Exception/ResourcesLoadFailedException.cpp \
  Exception/ResourceTagNotFoundException.cpp \
  Exception/RuntimeException.cpp \
  Exception/StreamIoException.cpp \
  Exception/SystemException.cpp \
  Exception/TemporaryFileNotAvailableException.cpp \
  Exception/ThirdPartyException.cpp \
  Exception/UnclassifiedException.cpp \
  Exception/UnderflowException.cpp \
  Exception/XmlException.cpp \
  Exception/XmlParserException.cpp \
  System/AceStreamHelper.cpp \
  System/ByteSourceFileImpl.cpp \
  System/ByteSourceMemoryImpl.cpp \
  System/ByteSourceSocketStreamImpl.cpp \
  System/ByteSourceStreamImpl.cpp \
  System/ClassFactory.cpp \
  System/Configuration.cpp \
  System/ConfigurationHeap.cpp \
  System/ConfigurationSection.cpp \
  System/ConfigurationSectionCollection.cpp \
  System/Disposable.cpp \
  System/DisposableCollection.cpp \
  System/FileUtil.cpp \
  System/FoundationConfigProperties.cpp \
  System/GuardDisposable.cpp \
  System/MemoryStreamHelper.cpp \
  System/NamedSerializable.cpp \
  System/Object.cpp \
  System/PacketParser.cpp \
  System/Resources.cpp \
  System/Serializable.cpp \
  System/ServerConnectionBase.cpp \
  System/SetLocale.cpp \
  System/Stream.cpp \
  System/StreamData.cpp \
  System/StreamHelper.cpp \
  System/StreamParser.cpp \
  System/StreamReader.cpp \
  System/StreamWriter.cpp \
  System/Util.cpp \
  System/XmlUtil.cpp

noinst_HEADERS = $(include_SOURCES) \
  Foundation.h \
  FoundationDefs.h \
  Data/BatchPropertyCollection.h \
  Data/Byte.h \
  Data/ByteReader.h \
  Data/ByteSink.h \
  Data/ByteSource.h \
  Data/Collection.h \
  Data/DateTime.h \
  Data/FeaturePropertyType.h \
  Data/MimeType.h \
  Data/NamedCollection.h \
  Data/NullableProperty.h \
  Data/Property.h \
  Data/PropertyCollection.h \
  Data/PropertyDefinition.h \
  Data/PropertyType.h \
  Data/StringCollection.h \
  Data/StringProperty.h \
  Exception/ApplicationException.h \
  Exception/ArgumentOutOfRangeException.h \
  Exception/ClassNotFoundException.h \
  Exception/ConfigurationException.h \
  Exception/ConfigurationLoadFailedException.h \
  Exception/ConfigurationSaveFailedException.h \
  Exception/DateTimeException.h \
  Exception/DecryptionException.h \
  Exception/DirectoryNotFoundException.h \
  Exception/DivideByZeroException.h \
  Exception/DomainException.h \
  Exception/DuplicateDirectoryException.h \
  Exception/DuplicateFileException.h \
  Exception/DuplicateObjectException.h \
  Exception/EncryptionException.h \
  Exception/Exception.h \
  Exception/ExceptionDefs.h \
  Exception/FileIoException.h \
  Exception/FileNotFoundException.h \
  Exception/GridDensityException.h \
  Exception/IndexOutOfRangeException.h \
  Exception/InvalidArgumentException.h \
  Exception/InvalidCastException.h \
  Exception/InvalidMimeTypeException.h \
  Exception/InvalidOperationException.h \
  Exception/InvalidPropertyTypeException.h \
  Exception/InvalidStreamHeaderException.h \
  Exception/IoException.h \
  Exception/LengthException.h \
  Exception/LogicException.h \
  Exception/NotFiniteNumberException.h \
  Exception/NotImplementedException.h \
  Exception/NullArgumentException.h \
  Exception/NullPropertyValueException.h \
  Exception/NullReferenceException.h \
  Exception/ObjectNotFoundException.h \
  Exception/OutOfMemoryException.h \
  Exception/OutOfRangeException.h \
  Exception/OverflowException.h \
  Exception/PlatformNotSupportedException.h \
  Exception/ResourcesException.h \
  Exception/ResourcesLoadFailedException.h \
  Exception/ResourceTagNotFoundException.h \
  Exception/RuntimeException.h \
  Exception/StreamIoException.h \
  Exception/SystemException.h \
  Exception/TemporaryFileNotAvailableException.h \
  Exception/ThirdPartyException.h \
  Exception/UnclassifiedException.h \
  Exception/UnderflowException.h \
  Exception/XmlException.h \
  Exception/XmlParserException.h \
  System/AceStreamHelper.h \
  System/ArgumentPacket.h \
  System/BasicPacket.h \
  System/BinaryStreamArgumentPacket.h \
  System/ByteSourceFileImpl.h \
  System/ByteSourceImpl.h \
  System/ByteSourceMemoryImpl.h \
  System/ByteSourceSocketStreamImpl.h \
  System/ByteSourceStreamImpl.h \
  System/ClassFactory.h \
  System/CollectionPacket.h \
  System/Configuration.h \
  System/ConfigurationHeap.h \
  System/ConfigurationSection.h \
  System/ConfigurationSectionCollection.h \
  System/ControlPacket.h \
  System/Disposable.h \
  System/DisposableCollection.h \
  System/FileUtil.h \
  System/FoundationClassId.h \
  System/FoundationConfigProperties.h \
  System/GuardDisposable.h \
  System/LinuxMemoryStatus.h \
  System/MemoryStreamHelper.h \
  System/NamedSerializable.h \
  System/Object.h \
  System/OperationPacket.h \
  System/OperationResponsePacket.h \
  System/PacketParser.h \
  System/PacketStructure.h \
  System/Ptr.h \
  System/Resources.h \
  System/Serializable.h \
  System/ServerConnectionBase.h \
  System/SetLocale.h \
  System/Stream.h \
  System/StreamData.h \
  System/StreamHeader.h \
  System/StreamHelper.h \
  System/StreamParser.h \
  System/StreamReader.h \
  System/StreamWriter.h \
  System/Util.h \
  System/XmlDefs.h \
  System/XmlUtil.h

INCLUDES = \
  -IData \
  -IException \
  -ISystem \
  -I../Security \
  -I../MdfModel \
  -I../../Oem/ACE/ACE_wrappers \
  -I../../Oem/dbxml/xerces-c-src/src

libMgFoundation_la_LIBADD = \
  -lACE \
  -lMgMdfParser \
  -lMgMdfModel \
  -lxerces-c

libMgFoundation_la_LDFLAGS = -release $(PACKAGE_VERSION) \
  -L../../Oem/ACE/ACE_wrappers/ace \
  -L../../Oem/dbxml/install/lib \
  -L../MdfParser \
  -L../MdfModel
